added loading indicators to scenarios 2 and 3

--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,9 +11,9 @@
   <title>TeamSpotifier</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3949540679" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3891900160" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?3883551929"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?280600418"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -89,7 +89,7 @@ var __adobewebfontsappname__ = "muse";
     </div>
     <div class="colelem" id="u170"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u168-4"><!-- content -->
-     <p>we are team Spotifier and we are going to change the way that you listen to music</p>
+     <p>we are team Spotifier and we are going to change the way that you listen to music with Spotify</p>
     </div>
     <div class="clearfix colelem" id="pu695"><!-- group -->
      <div class="grpelem" id="u695"><!-- custom html -->
@@ -290,10 +290,7 @@ durationSlider1Changed(event,ui);
 </div>
      <div class="grpelem" id="u363"><!-- rasterized frame --></div>
     </div>
-    <div class="clearfix colelem" id="pu962"><!-- group -->
-     <div class="grpelem" id="u962"><!-- custom html -->
-      <div id="scenario2Indicator"></div>
-</div>
+    <div class="clearfix colelem" id="ppu366-4"><!-- group -->
      <div class="clearfix grpelem" id="pu366-4"><!-- column -->
       <div class="clearfix colelem" id="u366-4"><!-- content -->
        <p>adjust the duration of your playlist</p>
@@ -319,20 +316,25 @@ durationSlider2Changed(event,ui);
         <p>15 mins</p>
        </div>
       </div>
-      <div class="Button rounded-corners clearfix colelem" id="buttonu359"><!-- container box -->
-       <div class="clearfix grpelem" id="u362-4"><!-- content -->
-        <p>Search</p>
-       </div>
-       <div class="clip_frame grpelem" id="u360"><!-- image -->
-        <img class="block" id="u360_img" src="images/search.png" data-hidpi-src="images/search_2x.png" alt="" width="18" height="18"/>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u355-4"><!-- content -->
-       <p>search results</p>
-      </div>
-      <div class="colelem" id="u369"><!-- custom html -->
-       <div id="u250" class="grpelem" style="height:200px; width:500px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
+      <div class="clearfix colelem" id="pu962"><!-- group -->
+       <div class="grpelem" id="u962"><!-- custom html -->
+        <div id="scenario2Indicator"></div>
 </div>
+       <div class="grpelem" id="u369"><!-- custom html -->
+        <div id="u250" class="grpelem" style="height:200px; width:500px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
+</div>
+       <div class="clearfix grpelem" id="u355-4"><!-- content -->
+        <p>search results</p>
+       </div>
+       <div class="Button rounded-corners clearfix grpelem" id="buttonu359"><!-- container box -->
+        <div class="clearfix grpelem" id="u362-4"><!-- content -->
+         <p>Search</p>
+        </div>
+        <div class="clip_frame grpelem" id="u360"><!-- image -->
+         <img class="block" id="u360_img" src="images/search.png" data-hidpi-src="images/search_2x.png" alt="" width="18" height="18"/>
+        </div>
+       </div>
+      </div>
       <div class="PamphletWidget clearfix widget_invisible colelem" id="pamphletu498"><!-- none box -->
        <div class="ThumbGroup clearfix grpelem" id="u499"><!-- none box -->
         <div class="popup_anchor">
@@ -493,10 +495,7 @@ energySliderChanged(event,ui);
       <p><span id="u664">0 min, 15 max</span></p>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu964"><!-- group -->
-     <div class="grpelem" id="u964"><!-- custom html -->
-      <div id="scenario3Indicator"></div>
-</div>
+    <div class="clearfix colelem" id="ppu427-4"><!-- group -->
      <div class="clearfix grpelem" id="pu427-4"><!-- column -->
       <div class="clearfix colelem" id="u427-4"><!-- content -->
        <p>danceability</p>
@@ -550,20 +549,25 @@ livenessSliderChanged(event,ui);
         <p>0 min, 15 max</p>
        </div>
       </div>
-      <div class="Button rounded-corners clearfix colelem" id="buttonu615"><!-- container box -->
-       <div class="clearfix grpelem" id="u618-4"><!-- content -->
-        <p>Search</p>
-       </div>
-       <div class="clip_frame grpelem" id="u616"><!-- image -->
-        <img class="block" id="u616_img" src="images/search14x14.png" data-hidpi-src="images/search14x14_2x.png" alt="" width="13" height="13"/>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u621-4"><!-- content -->
-       <p>search results</p>
-      </div>
-      <div class="colelem" id="u432"><!-- custom html -->
-       <div id="useCaseThreeDiv" class="grpelem" style="height:200px; width:500px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
+      <div class="clearfix colelem" id="pu964"><!-- group -->
+       <div class="grpelem" id="u964"><!-- custom html -->
+        <div id="scenario3Indicator"></div>
 </div>
+       <div class="Button rounded-corners clearfix grpelem" id="buttonu615"><!-- container box -->
+        <div class="clearfix grpelem" id="u618-4"><!-- content -->
+         <p>Search</p>
+        </div>
+        <div class="clip_frame grpelem" id="u616"><!-- image -->
+         <img class="block" id="u616_img" src="images/search14x14.png" data-hidpi-src="images/search14x14_2x.png" alt="" width="13" height="13"/>
+        </div>
+       </div>
+       <div class="grpelem" id="u432"><!-- custom html -->
+        <div id="useCaseThreeDiv" class="grpelem" style="height:200px; width:500px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
+</div>
+       <div class="clearfix grpelem" id="u621-4"><!-- content -->
+        <p>search results</p>
+       </div>
+      </div>
       <div class="PamphletWidget clearfix widget_invisible colelem" id="pamphletu553"><!-- none box -->
        <div class="ThumbGroup clearfix grpelem" id="u554"><!-- none box -->
         <div class="popup_anchor">
