layout for scenario 2 new playlist modal fixed

--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,7 +11,7 @@
   <title>TeamSpotifier</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?341158295" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3902565439" id="pagesheet"/>
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?79500571"/>
   <![endif]-->
@@ -380,30 +380,30 @@ durationSlider2Changed(event,ui);
       </div>
       <div class="popup_anchor" id="u529popup">
        <div class="ContainerGroup rgba-background clearfix" id="u529"><!-- stack box -->
-        <div class="Container clearfix grpelem" id="u530"><!-- column -->
-         <div class="clearfix colelem" id="pu534-4"><!-- group -->
-          <div class="clearfix grpelem" id="u534-4"><!-- content -->
-           <p>create a new playlist</p>
-          </div>
-          <div class="clip_frame grpelem" id="u537"><!-- image -->
-           <img class="block" id="u537_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="20" height="20"/>
-          </div>
-         </div>
-         <div class="clearfix colelem" id="u532-4"><!-- content -->
+        <div class="Container clearfix grpelem" id="u530"><!-- group -->
+         <div class="grpelem" id="u1025"><!-- custom html -->
+          <div></div>
+
+</div>
+         <div class="grpelem" id="u539"><!-- custom html -->
+          <input id="newPlayListInput2" style"width=200px;height=30px" placeholder="playlist name"></input>
+</div>
+         <div class="grpelem" id="u535"><!-- custom html -->
+          <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">Save</button>
+</div>
+         <div class="clearfix grpelem" id="u532-4"><!-- content -->
           <p>enter a name for a new playlist and click save to make a new playlist from these songs</p>
          </div>
-         <div class="clearfix colelem" id="pu539"><!-- group -->
-          <div class="grpelem" id="u539"><!-- custom html -->
-           <input id="newPlayListInput2" style"width=200px;height=30px" placeholder="playlist name"></input>
-</div>
-          <div class="grpelem" id="u535"><!-- custom html -->
-           <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">Save</button>
-</div>
-          <div class="grpelem" id="u531"><!-- rasterized frame --></div>
-          <div class="grpelem" id="u661"><!-- custom html -->
-           <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistCancelButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">cancel</button>
-</div>
+         <div class="clip_frame grpelem" id="u537"><!-- image -->
+          <img class="block" id="u537_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="20" height="20"/>
          </div>
+         <div class="clearfix grpelem" id="u534-4"><!-- content -->
+          <p>create a new playlist</p>
+         </div>
+         <div class="grpelem" id="u531"><!-- rasterized frame --></div>
+         <div class="grpelem" id="u661"><!-- custom html -->
+          <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistCancelButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">cancel</button>
+</div>
         </div>
        </div>
       </div>
